--- a/src/styles/PageRegister.css
+++ b/src/styles/PageRegister.css
@@ -25,7 +25,7 @@
 .register-block {
     position: relative;
     width: 50%;
-    height: 50%;
+    height: auto;
     margin-left:25%;
     top:15%;
     display: block;
@@ -35,6 +35,24 @@
     border: 1px solid rgba(0, 0, 0, 0.25);
     border-radius: 15px;
     padding:20px;
+    margin-bottom:30px;
+}
+
+@media (min-height: 900px) {
+    .register-block {
+        position: relative;
+        width: 50%;
+        height: 50%;
+        margin-left:25%;
+        top:15%;
+        display: block;
+        overflow: auto;
+
+        background: #FFFFFF;
+        border: 1px solid rgba(0, 0, 0, 0.25);
+        border-radius: 15px;
+        padding:20px;
+    }
 }
 
 .register-title {
@@ -70,12 +88,28 @@
     font-weight: normal;
     font-size: 22px;
     line-height: 40px;
-    width: 20%;
+    width: 100px;
 
     color: #FFFFFF;
     background: #92C502;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
+}
+
+@media (min-width: 900px){
+    .button {
+        font-family: Nunito;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 22px;
+        line-height: 40px;
+        width: 20%;
+
+        color: #FFFFFF;
+        background: #92C502;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        border-radius: 10px;
+    }
 }
 
 .login {
@@ -84,12 +118,28 @@
     font-weight: normal;
     font-size: 22px;
     line-height: 40px;
-    width: 20%;
+    width: 100px;
 
     color: #FFFFFF;
     background: #28536B;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
+}
+
+@media (min-width: 900px) {
+    .login {
+        font-family: Nunito;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 22px;
+        line-height: 40px;
+        width: 20%;
+
+        color: #FFFFFF;
+        background: #28536B;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        border-radius: 10px;
+    }
 }
 
 .link {
